--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,451 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+
+  background-color: var(--bg-color);
+  background-image: repeating-linear-gradient(
+      to right,
+      var(--strip-color),
+      transparent 2px
+    ),
+    repeating-linear-gradient(to bottom, var(--strip-color), transparent 2px),
+    repeating-linear-gradient(
+      to bottom,
+      var(--grad-color-top),
+      var(--grad-color-bottom)
+    );
+  background-size: cover;
+  background-attachment: fixed;
+
+  font-family: var(--main-font, sans-serif);
+  font-variation-settings: "wght" var(--normal-font-weight), "slnt" 0;
+  font-size: 18px;
+  color: var(--accent-color);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-family: var(--accent-font, serif);
+  font-weight: normal;
+
+  background-color: var(--bg-color);
+  border: 2px currentColor solid;
+
+  inline-size: clamp(375px, 60%, 700px);
+  max-block-size: 368px;
+
+  margin: 100px auto;
+  padding-block: clamp(120px, 10%, 136px) 25px;
+}
+
+.header__logo {
+  text-decoration: none;
+  
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  line-height: 1;
+
+  margin-block-end: 20px;
+}
+
+.header__heading {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  line-height: 1;
+  text-transform: uppercase;
+
+  margin-block-end: 23px;
+}
+
+.header__theme-menu {
+  padding-inline-start: 1.4dvw;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+
+.theme-menu__button {
+  position: relative;
+
+  font-size: 14px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.theme-menu__button:hover,
+.theme-menu__button:disabled {
+  transition: opacity 0.3s ease;
+  opacity: 60%;
+}
+
+.theme-menu__button:disabled {
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  animation: leftright 0.5s ease-in-out infinite alternate;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 60%;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  display: block;
+  inset-inline-start: 0;
+  inset-block-end: -3px;
+
+  background-color: currentColor;
+  inline-size: 100%;
+  block-size: 2px;
+
+  scale: 0 1;
+  transform-origin: left;
+  transition: scale 0.3s ease;
+}
+
+.theme-menu__button:hover::after,
+.theme-menu__button:focus-visible::after {
+  scale: 1 1;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-card__list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  inline-size: clamp(375px, 60%, 700px);
+}
+
+.content-card__item {
+  background-color: var(--bg-color);
+  border: 2px currentColor solid;
+}
+
+.content-card__title {
+  font-variation-settings: "wght" var(--bold-font-weight), "slnt" 0;
+  font-size: inherit;
+  line-height: 1.21;
+
+  padding: 5px 10px 6px;
+}
+
+.mix {
+  position: relative;
+  outline: 2px currentColor solid;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  object-position: center;
+}
+
+.watermark {
+  position: absolute;
+  right: clamp(13px, 2vw, 25px);
+  top: 25px;
+  z-index: 1;
+  font-family: var(--accent-font), serif;
+  font-size: 14px;
+  line-height: 1;
+  color: inherit;
+  text-shadow: -1px 0 var(--bg-color), 0 1px var(--bg-color),
+    1px 0 var(--bg-color), 0 -1px var(--bg-color);
+
+  mix-blend-mode: hard-light;
+  opacity: 50%;
+}
+
+@supports (
+  (text-stroke: 1px var(--bg-color)) or
+    (-webkit-text-stroke: 1px var(--bg-color))
+) {
+  .watermark {
+    -webkit-text-stroke: 1px var(--bg-color);
+    text-stroke: 1px var(--bg-color);
+    text-shadow: none;
+  }
+}
+
+.multi {
+  filter: brightness(200%) saturate(120%) hue-rotate(180deg);
+}
+
+.sepia {
+  filter: sepia(70%);
+}
+
+.brightness {
+  filter: brightness(80%);
+}
+
+.saturate {
+  filter: saturate(158%);
+}
+
+.hue {
+  filter: hue-rotate(145deg);
+}
+
+.contrast {
+  filter: contrast(200%);
+}
+
+.grayscale {
+  filter: grayscale(0.6);
+}
+
+.content-card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+
+  padding: 28px 25px 0;
+
+  line-height: 1.16;
+}
+
+.content-card__buttons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 6px;
+
+  padding: 25px;
+}
+
+.card__icon-button {
+  block-size: 34px;
+  outline: 2px transparent solid;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px currentColor solid;
+  transition: outline 0.3s ease;
+}
+
+.card__like-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+
+  border: 2px currentColor solid;
+  inline-size: 130px;
+  block-size: 38px;
+}
+
+.button__text {
+  position: relative;
+
+  mix-blend-mode: difference;
+
+  font-family: var(--accent-font), serif;
+  font-size: 14px;
+  line-height: 0.9;
+  color: var(--btn-color);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-block-start: 50px;
+  padding-block-end: 78px;
+}
+
+.save-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  position: relative;
+
+  background-color: var(--bg-color);
+
+  border: 2px currentColor solid;
+
+  inline-size: clamp(310px, 80%, 340px);
+  block-size: 55px;
+}
+
+.card__like-button:focus,
+.save-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible,
+.save-button:focus-visible {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button::before,
+.save-button::before {
+  content: "";
+  position: absolute;
+  display: block;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: currentColor;
+  scale: 0 1;
+  transform-origin: left;
+  transition: 0.5s ease-in-out;
+}
+
+.card__like-button:hover::before,
+.save-button:hover::before {
+  scale: 1 1;
+}
+
+.save-icon {
+  mix-blend-mode: difference;
+  fill: var(--btn-color);
+  inline-size: 21px;
+  aspect-ratio: 1/1;
+}
+
+.dialog {
+  position: fixed;
+  inset: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  background-color: var(--bg-color);
+  border: 2px var(--accent-color) solid;
+  transition: opacity 0.3s ease-in-out;
+
+  max-inline-size: clamp(341px, 50%, 353px);
+  min-block-size: 191px;
+
+  padding-block: 30px;
+  padding-inline: 30px;
+}
+
+.dialog:not([open]) {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.5);
+}
+
+.dialog-textarea {
+  display: flex;
+  gap: 20px;
+  inline-size: 100%;
+  line-height: 1.5;
+  color: var(--accent-color);
+}
+
+.dialog .save-icon {
+  min-inline-size: 39px;
+}
+
+.dialog-text {
+  font-family: var(--accent-font), serif;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.ok-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  text-transform: uppercase;
+
+  border: 2px var(--accent-color) solid;
+
+  inline-size: 100%;
+  block-size: 38px;
+}
+
+.ok-button:focus {
+  outline: none;
+}
+
+.ok-button:focus-visible {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: box-shadow 0.3s ease;
+}
+
+.ok-button::before {
+  content: "";
+  position: absolute;
+  display: block;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: var(--accent-color);
+  scale: 0 1;
+  transform-origin: left;
+  transition: 0.5s ease-in-out;
+}
+
+.ok-button:hover::before {
+  scale: 1 1;
+}
+
+@media (width <= 375px) {
+  .header,
+  .content-card__list {
+    inline-size: 100%;
+  }
+
+  .header__theme-menu {
+    padding-inline-start: 5%;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    padding-block-start: 50px;
+    padding-block-end: 78px;
+  }
+
+  .save-button {
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 8px;
+
+    block-size: 84px;
+    padding-block: 15px;
+  }
+
+  .save-icon {
+    inline-size: 28px;
+    aspect-ratio: 1/1;
+  }
+
+  .dialog {
+    padding-inline: 40px;
+  }
 }
