--- a/styles/animations.css
+++ b/styles/animations.css
@@ -80,14 +80,24 @@
   transition: fill 0.3s linear;
 }
 
-.card__icon-button:active .main-body,
-.card__icon-button:active .core {
+.card__icon-button:active .main-body {
   fill: var(--heart-color);
+  transition: fill 0.3s 0.05s linear;
 }
 
-.like-icon.is-liked .main-body,
+.card__icon-button:active .core {
+  fill: var(--heart-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-color);
+  transition: fill 0.3s 0.05s linear;
+}
+
 .like-icon.is-liked .core {
   fill: var(--heart-color);
+  transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .contour {
