--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
   --main-font: "Inter-Variable";
-  --accent-font: "PressStart2P-Regular";
+  --accent-font: "PressStart2P";
 
   --normal-font-weight: 400;
   --bold-font-weight: 700;
