--- a/styles/style.css
+++ b/styles/style.css
@@ -18,13 +18,12 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
 
-  background-color: var(--bg-color);
   background-image: repeating-linear-gradient(
       to right,
-      var(--strip-color),
-      transparent 2px
+      var(--strip-color) 0px 2px,
+      transparent 2px 4px
     ),
-    repeating-linear-gradient(to bottom, var(--strip-color), transparent 2px),
+    repeating-linear-gradient(to bottom, var(--strip-color) 0px 2px, transparent 2px 4px),
     repeating-linear-gradient(
       to bottom,
       var(--grad-color-top),
@@ -44,7 +43,7 @@
   flex-direction: column;
   align-items: center;
 
-  font-family: var(--accent-font, serif);
+  font-family: var(--accent-font, fantasy);
   font-weight: normal;
 
   background-color: var(--bg-color);
@@ -177,7 +176,7 @@
   right: clamp(13px, 2vw, 25px);
   top: 25px;
   z-index: 1;
-  font-family: var(--accent-font), serif;
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   line-height: 1;
   color: inherit;
@@ -307,7 +306,7 @@
 
   mix-blend-mode: difference;
 
-  font-family: var(--accent-font), serif;
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   line-height: 0.9;
   color: var(--btn-color);
@@ -368,7 +367,7 @@
 }
 
 .dialog-text {
-  font-family: var(--accent-font), serif;
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   text-transform: uppercase;
 }
